--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,5 +4,6 @@ COPY . /app
 USER root
 COPY ./data /app/data
 COPY ./models /app/models
+RUN pip install transformers
 RUN rasa train
 CMD ["run","-m","/app/models","--enable-api","--cors","*","--debug" ,"--endpoints", "endpoints.yml", "--log-file", "out.log", "--debug"]
